html css changes

--- a/index.html
+++ b/index.html
@@ -21,46 +21,52 @@
 </head>
 <body>
 <article class="test">
-  <div class="result">
-    <p class ="card-title">
-    Your Result
-    </p>
-    <span class="test-result">
-      <h1 class="strong-result">76</h1>
-      <p class="text">of 100</p>
-    </span>
-    <h2 class="header">
-    Great
-    </h2>
-    <p class="text">
-    You scored higher than 65% of the people who have taken these tests.
-    </p>
-  </div>
-  <div class="detailed-result">
-    <h3 class="summary-header">Summary</h3>
-    <ul class="result-list">
-      <li class="result-element">
-      Reaction
-      <strong class="strong">80</strong> / 100
-      </li>
-      <li class="result-element">
-      Memory
-      <strong class="strong">92</strong> / 100
-      </li>
-      <li class="result-element">
-      Verbal
-      <strong class="strong">61</strong> / 100
-      </li>
-      <li class="result-element">
-      Visual
-      <strong class="strong">73</strong> / 100
-      </li>
-    </ul>
-    <button class="continue-button">
-      <p class="continue">
-    Continue
+  <div class="container">
+    <div class="result">
+      <p class ="card-title">
+      Your Result
       </p>
-    </button>
+      <span class="test-result">
+        <h1 class="strong-result">76</h1>
+        <p class="text">of 100</p>
+      </span>
+      <h2 class="header">
+      Great
+      </h2>
+      <p class="text">
+      You scored higher than 65% of the people who have taken these tests.
+      </p>
+    </div>
+    <div class="detailed-result">
+      <h3 class="summary-header">Summary</h3>
+      <ul class="result-list">
+        <li class="result-element r">
+          <span class="img-span red"><img class="img-icon" src="assets/images/icon-reaction.svg" width="15" height="15" alt="icon">
+        Reaction</span>
+          <span class="span"><strong class="strong">80</strong> / 100</span>
+        </li>
+        <li class="result-element y">
+          <span class="img-span yellow"><img class="img-icon" src="assets/images/icon-memory.svg" width="15" height="15" alt="icon">
+        Memory</span>
+        <span class="span"><strong class="strong">92</strong> / 100</span>
+        </li>
+        <li class="result-element g">
+          <span class="img-span green"><img class="img-icon" src="assets/images/icon-verbal.svg" width="15" height="15" alt="icon">
+        Verbal</span>
+        <span class="span"><strong class="strong">61</strong> / 100</span>
+        </li>
+        <li class="result-element b">
+          <span class="img-span blue"><img class="img-icon" src="assets/images/icon-visual.svg" width="15" height="15" alt="icon">
+        Visual</span>
+        <span class="span"><strong class="strong">73</strong> / 100</span>
+        </li>
+      </ul>
+      <button class="continue-button">
+        <p class="continue">
+      Continue
+        </p>
+      </button>
+    </div>
   </div>
   </article>
   <div class="attribution">
