--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </article>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/altynbaeva">Rozaliya Altynbaeva</a>.
   </div>
 </body>
 </html>
